# Movie-search-api

./: .djlintrc  .pre-commit-config.yaml  .pylintrc  README.md  app.py  config.py  pyproject.toml  swagger.yml
migrations/versions/: 537a283ac429_added_models.py  cc1ecc856897_added_user_model.py  f627235b0e57_added_models.py
models/: __init__.py  address.py  base.py  country.py  genre.py  movie.py  state.py  user.py
views/: view.py
