[tool.poetry]
name = "flask-api"
version = "0.1.0"
description = ""
authors = ["Tariq Jamal A <tariqjamal@mallow-tech.com>"]
readme = "README.md"
packages = [{include = "flask_api"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = ">=1.0.4,<2.3"
connexion = "^2.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
